[package]
name = "rustgraphs"
version = "0.1.0"
authors = ["Seth Bromberger <github@bromberger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph_matrix = { path = "../graph_matrix" }
ordered-float = "1.0.2"
priority-queue = "0.7.0"
bitvec = "0.17.3"
num = "0.2.1"
